--- a/slides/06_r_markdown_for_reproducible_reports.html
+++ b/slides/06_r_markdown_for_reproducible_reports.html
@@ -49,10 +49,6 @@ The successful student will be able to:
 * create automatically numbered tables and cross reference them in the text  
 * create automatically numbered figures and cross reference them in the text  
 
-
-### 🎬 An instruction to do something!!
-
-
 ---
 # Goal!
 
@@ -904,7 +900,7 @@ Raton, Florida: Chapman and Hall/CRC. URL:
 
 class: inverse
 
-# 🥳 Congratulations! Keep practising! 🎂 
+# 🎉 Congratulations! Keep practising! 🎉 
 
 ---
 # Introduction to Reproducibility in R
