--- a/slides/01_intro_and_principles_of_repro.html
+++ b/slides/01_intro_and_principles_of_repro.html
@@ -5,8 +5,24 @@
     <meta charset="utf-8" />
     <meta name="author" content="Emma Rand" />
     <link href="libs/remark-css/default.css" rel="stylesheet" />
-    <link rel="stylesheet" href="..\css_files\emma.css" type="text/css" />
-    <link rel="stylesheet" href="..\css_files\emma-fonts.css" type="text/css" />
+    <link href="libs/tile-view/tile-view.css" rel="stylesheet" />
+    <script src="libs/tile-view/tile-view.js"></script>
+    <script src="libs/js-cookie/js.cookie.js"></script>
+    <script src="libs/peerjs/peerjs.min.js"></script>
+    <script src="libs/tiny.toast/toast.min.js"></script>
+    <link href="libs/xaringanExtra-broadcast/broadcast.css" rel="stylesheet" />
+    <script src="libs/xaringanExtra-broadcast/broadcast.js"></script>
+    <script src="libs/fabric/fabric.min.js"></script>
+    <link href="libs/xaringanExtra-scribble/scribble.css" rel="stylesheet" />
+    <script src="libs/xaringanExtra-scribble/scribble.js"></script>
+    <script>document.addEventListener('DOMContentLoaded', function() { window.xeScribble = new Scribble({"pen_color":["#FF0000"],"pen_size":3,"eraser_size":30}) })</script>
+    <script src="libs/clipboard/clipboard.min.js"></script>
+    <link href="libs/xaringanExtra-clipboard/xaringanExtra-clipboard.css" rel="stylesheet" />
+    <script src="libs/xaringanExtra-clipboard/xaringanExtra-clipboard.js"></script>
+    <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
+    <link href="libs/xaringanExtra-extra-styles/xaringanExtra-extra-styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../css_files/emma.css" type="text/css" />
+    <link rel="stylesheet" href="../css_files/emma-fonts.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
@@ -22,25 +38,43 @@ class: center, middle, inverse, title-slide
 
 
 
+<style>.shareagain-bar {
+--shareagain-foreground: rgb(255, 255, 255);
+--shareagain-background: rgba(0, 0, 0, 0.5);
+}</style>
 
 
 
 
 
 
-# What this training is and is not
+
+
+
+&lt;style&gt;
+div.blue { background-color:#b0cdef; border-radius: 5px; padding: 20px;}
+div.grey { background-color:#d3d3d3; border-radius: 0px; padding: 0px;}
+&lt;/style&gt;
+
+
+---
+class: inverse
+
+# Programme Overview
+
+---
+
+# What this training *is* and *is not*
+
+Chosen topics are: foundational, widely applicable, and transferable conceptually.
 
 .pull-left[
 
-## Is an introduction to
-* R for those that have no experience
-* Advanced data import, tidying and/or presentation for those with experience
-* some universal and highly transferable concepts 
-* the skills for organising reproducible analyses  
+**It is**
+* An introduction to R for those that have no previous experience
+* About using RStudio projects and good practice in code and project documentation and organisation
+* An introduction to the tidyverse, RMarkdown, some more advanced data import
  
-
-![r logo](../pics/RStudio-Logo-Flat.png)
-
 
 ]
 
@@ -48,32 +82,27 @@ class: center, middle, inverse, title-slide
 
 .pull-right[
 
-## It is not
-* An introduction to statistics&lt;sup&gt;1&lt;/sup&gt;  
+**It is not**
+* An introduction to statistics  
 * Magic  
 
-&amp;nbsp;  
-&amp;nbsp;  
-&amp;nbsp;  
-&amp;nbsp;  
-[1] but ...
 ]
 
 
 ---
 # Programme overview
 
-This programme comprises several modules lasting from 30 minutes to 2 hours. The selection of modules you undertake will depend on your previous experience.
+Modules lasting from 30 minutes to 2 hours. The selection of modules you undertake will depend on your previous experience.
 
 [1. Introduction and Principles of reproducibility](01_intro_and_principles_of_repro.html)  
-Expected audience: Everyone
+Audience: Everyone
 * Rationale for scripting  
 * Why R?  
 * Organisation of data  
 * Organisation of analyses  
 
 [2. Introduction to R and working with data](02_intro_to_r_and_working_with_data.html)  
-Expected audience: Those without previous experience
+Audience: Those without previous experience of R
 * Finding your way round RStudio  
 * Typing in data, doing some calculations on it, plotting it  
 * Understanding the manual  
@@ -83,28 +112,105 @@ Expected audience: Those without previous experience
 ---
 # Programme overview - continued
 [3. RStudio Projects](03_rstudio_projects.html)  
-Expected audience: Those without experience of RStudio projects
+Audience: Those without experience of RStudio projects
 * Organising your work in a logical, consistent and reproducible way using RStudio Projects  
 * Writing code with relative paths given appropriate to your project organisation  
 * Writing dataframes and figures to file  
 
 [4. Tidying data and the tidyverse including the pipe](04_tidying_data_and_the_tidyverse.html)  
-Expected audience: For those with previous experience of R but little of 'tidy data' and the tidyverse, such as having done "Introduction to R and working with data."
+Audience: For those with previous experience of R but little of 'tidy data' and the tidyverse, such as having done "Introduction to R and working with data."
 * Using the tidyverse including the pipe to link operations together.  
 * Carrying out some common data tidying tasks such as reshaping, renaming and recoding variable and cleaning cell contents  
 ---
 # Programme overview - continued   
 [5. Advanced data import](05_advanced_data_import.html)  
-Expected audience: For those with previous experience of R such as having done "Introduction to R and working with data" and "Tidying data and the tidyverse including the pipe."
+Audience: For those with previous experience of R such as having done "Introduction to R and working with data" and "Tidying data and the tidyverse including the pipe."
 * Understanding what matters in data import  
 * Importing plain text and proprietary data formats stored locally and on the web  
 * Carrying out some simple web scraping  
 * Packages available for importing publicly accessible data from APIs  
 
 [6. R Markdown for Reproducible Reports]()  
-Expected audience: For those with previous experience of R such as having done "Introduction to R and working with data."
+Audience: For those with previous experience of R such as having done "Introduction to R and working with data."
 * Making more advanced figures  
 * Creating reproducible reports in a variety of output formats.  
+
+---
+class: inverse
+
+# What is your previous experience? &lt;br&gt;Survey Results
+
+
+---
+# Survey results 1/3
+
+
+The distribution of ratings you (n = 3) gave in the survey were:
+&lt;img src="01_intro_and_principles_of_repro_files/figure-html/unnamed-chunk-2-1.png" width="864" /&gt;
+
+---
+# Survey results 2/3
+
+&lt;img src="01_intro_and_principles_of_repro_files/figure-html/unnamed-chunk-3-1.png" width="864" /&gt;
+
+
+
+---
+# Survey results 3/3
+Please rate your level of comfort with...
+
+&lt;img src="01_intro_and_principles_of_repro_files/figure-html/unnamed-chunk-4-1.png" width="864" /&gt;
+
+---
+class: inverse
+
+# Data analysis
+
+
+---
+# Data analysis
+
+How much of data analysis is using statistics?
+
+Less than you probably think
+
+~80% of your time on getting data, cleaning data, aggregating data, reshaping data, and exploring data using exploratory data analysis and data visualization.
+
+
+---
+# Reproducibility is key!
+
+One definition
+*"... obtaining consistent results using the same input data; computational steps, methods, and code; and conditions of analysis. This definition is synonymous with “computational reproducibility"*. &lt;a name=cite-National_Academies_of_Sciences_Engineering2019-sb&gt;&lt;/a&gt;([National Academies of Sciences, Engineering Medicine, et al., 2019](#bib-National_Academies_of_Sciences_Engineering2019-sb))
+
+Also see National Science Foundation &lt;a name=cite-K_Bollen2015-un&gt;&lt;/a&gt;([Bollen Cacioppo, et al., 2015](#bib-K_Bollen2015-un))
+
+
+---
+# Who cares?
+
+* Many high profile cases of work which did not reproduce e.g. Anil Potti unravelled by &lt;a name=cite-Baggerly2009-pw&gt;&lt;/a&gt;[Baggerly and Coombes (2009)](#bib-Baggerly2009-pw) 
+
+* Five selfish reasons to work reproducibly &lt;a name=cite-Markowetz2015&gt;&lt;/a&gt;([Markowetz, 2015](#bib-Markowetz2015)). Alternatively, see the [talk](https://youtu.be/yVT07Sukv9Q)
+
+
+* Will become standard in Science and publishing e.g OECD Global Science Forum Building digital workforce capacity and skills for data-intensive science &lt;a name=cite-OECD_Global_Science_Forum2020-cp&gt;&lt;/a&gt;([OECD Global Science Forum, 2020](#bib-OECD_Global_Science_Forum2020-cp))
+
+---
+# Open Science
+
+![](../pics/Foster.png)&lt;!-- --&gt;
+.font60[
+By Petr Knoth and Nancy Pontika - https://en.wikipedia.org/wiki/Open_science#/media/File:Os_taxonomy.png, CC BY 3.0, https://commons.wikimedia.org/w/index.php?curid=61125075
+]
+
+FAIR - Findable, Accessible, Interoperable, Reusable &lt;a name=cite-Wilkinson2016-pu&gt;&lt;/a&gt;([Wilkinson Dumontier, et al., 2016](#bib-Wilkinson2016-pu))
+
+---
+class: inverse
+
+# Rationale for scripting analysis
+
 
 ---
 background-image: url(../pics/rationale1.png)
@@ -112,6 +218,7 @@ background-position: 50% 35%
 background-size: 600px
 
 # Rationale for scripting analysis
+Science is the generation of ideas, designing work to test them and reporting the results.
 &lt;br&gt;
 &lt;br&gt;
 &lt;br&gt;
@@ -136,13 +243,41 @@ background-position: 50% 35%
 background-size: 600px
 
 # Rationale for scripting analysis
-
+We ensure reproducibility of laboratory and field work by planning and recording in lab books and using standard protocols. 
+--
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+Even so replicating results can be hard.
 ---
 background-image: url(../pics/rationale3.png)
 background-position: 50% 35%
 background-size: 600px
 
 # Rationale for scripting analysis
+We ensure reproducibility of laboratory and field work by planning and recording in lab books and using standard protocols. 
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+Even so replicating results can be hard.
+
+Workflows for computational projects and the data analysis and reporting of other work can, and should, be 100% reproducible! Scripting is the way to achieve this.
 
 ---
 background-image: url(../pics/rationale5.png)
@@ -151,60 +286,90 @@ background-size: 800px
 
 # Rationale for scripting analysis
 
+That reproducibility applies to all aspects of the data workflow.
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+--
+From importing or collecting the data, processing it for analysis, building statistical models and communicating the methods and results.
+
+--
+
+These are usually iterative and that process of iteration (the development of the analysis) should also be captured.
+
+---
+class: inverse
+
+# Why R?
+
+
 ---
 # Why R?
 
-## Open source and free
+Open source and free
 
 --
-
-### .......But so is Python
+ .......But so is Python
   
 --
 
-R caters to users who do not see themselves as programmers, but then allows them to slide gradually into programming  
+R has reputation for catering to users who do not see themselves as programmers, and  allowing them to slide gradually into programming.
 
 ![biologists](../pics/biologist1.png)
 
 --
 
-R was designed for data analysis and graphics  
-
-But use Python if you already have those skills!
+It was also designed for data analysis and graphics - it is a 'domain specific' programming language - which means it is usually easier to achieve those tasks in R than a general purpose programming language.
 
 ---
 background-image: url(../pics/welcome_to_rstats_twitter.png)
-background-position: 90% 55%
-background-size: 400px
+background-position: 95% 75%
+background-size: 350px
 # Why R?
-
-## Community
 
 The R community is one of R's greatest assets, being vibrant, inclusive and supportive of users at all levels.
 
-[#rstats](https://twitter.com/hashtag/rstats?lang=en)  
-[RForwards](https://forwards.github.io/)  
-[RLadies](https://rladies.org/)  
-[Hey! You there! You are welcome here](https://ropensci.org/blog/2017/06/23/community/)  
+* [#rstats](https://twitter.com/hashtag/rstats?lang=en) on twitter is very active
+* [RForwards](https://forwards.github.io/about/) the widening participation task force &lt;sup&gt;1&lt;/sup&gt;
+* [RLadies](https://rladies.org/) gender diversity promotion 
+* [Hey! You there! You are welcome here](https://ropensci.org/blog/2017/06/23/community/)  
 
+.font70[
 .footnote[
 Artwork by @allison_horst "welcome to rstats on twitter"
+1. I am member of the Core Team for Forwards
 ]
-
+]
 
 ---
 background-image: url(../pics/rmarkdown_wizards.png)
-background-position: 10% 45%
+background-position: 10% 60%
 background-size: 500px
 # Why R?
 
-## R Markdown  
+R Markdown is sometimes called R's "killer feature". It turns your analyses into fully reproducible high quality documents, reports, presentations and dashboards.
 
-R's "killer feature"  .......Super-charged reproducibility!
+Can run Python and other languages in R Markdown documents
 
+.font70[
 .footnote[
 Artwork by @allison_horst "Be an Rmarkdown knitting wizard."
 ]
+]
+
+---
+class: inverse
+
+# Aspects of Reproducibility
 
 ---
 # Organisation of data within files
@@ -390,7 +555,6 @@ Suppose we had just 3 individuals in each of two populations:
 ---
 # Summary
 
-.font150[
 * The course is:
   * an introduction to reproducible analyses rather than statistics  
   * not enough, you need to practice!  
@@ -400,23 +564,59 @@ Suppose we had just 3 individuals in each of two populations:
 * Recognising structure in your data and organising in 'tidy' format will pay dividends  
 * The structured, systematic and consistent organisation of analyses will pay dividends
 
-]
+
 
 ---
 # References
-.footnote[
-Slides made with with xaringan &lt;a name=cite-xaringan&gt;&lt;/a&gt;([Xie, 2019](#bib-xaringan))
+.font80[
+&lt;a name=bib-Baggerly2009-pw&gt;&lt;/a&gt;[Baggerly, K. A. and K. R.
+Coombes](#cite-Baggerly2009-pw) (2009). "DERIVING CHEMOSENSITIVITY FROM
+CELL LINES: FORENSIC BIOINFORMATICS AND REPRODUCIBLE RESEARCH IN
+HIGH-THROUGHPUT BIOLOGY". In: _Ann. Appl. Stat._ 3.4, pp. 1309-1334.
 
-]
+&lt;a name=bib-K_Bollen2015-un&gt;&lt;/a&gt;[Bollen, K., J. T. Cacioppo, et
+al.](#cite-K_Bollen2015-un) (2015). _Social, Behavioral, and Economic
+Sciences Perspectives on Robust and Reliable Science_. National Science
+Foundation.
+
 &lt;a name=bib-Bryan2018-hl&gt;&lt;/a&gt;[Bryan, J.](#cite-Bryan2018-hl) (2018).
 "Excuse Me, Do You Have a Moment to Talk About Version Control?" In:
 _Am. Stat._ 72.1, pp. 20-27.
 
 &lt;a name=bib-Codd1990-th&gt;&lt;/a&gt;[Codd, E. F.](#cite-Codd1990-th) (1990).
 _The Relational Model for Database Management: Version 2_. Boston, MA,
-USA: Addison-Wesley Longman Publishing Co, Inc.
+USA: Addison-Wesley Longman Publishing Co., Inc.
 
-&lt;a name=bib-Sandve2013-nd&gt;&lt;/a&gt;[Sandve, G. K, A. Nekrutenko, et
+&lt;a name=bib-Markowetz2015&gt;&lt;/a&gt;[Markowetz, F.](#cite-Markowetz2015)
+(2015). "Five selfish reasons to work reproducibly". En. In: _Genome
+Biol._ 16, p. 274.
+
+&lt;a
+name=bib-National_Academies_of_Sciences_Engineering2019-sb&gt;&lt;/a&gt;[National
+Academies of Sciences, Engineering, Medicine, et
+al.](#cite-National_Academies_of_Sciences_Engineering2019-sb) (2019).
+_Understanding Reproducibility and Replicability_. National Academies
+Press (US).
+
+&lt;a name=bib-OECD_Global_Science_Forum2020-cp&gt;&lt;/a&gt;[OECD Global Science
+Forum](#cite-OECD_Global_Science_Forum2020-cp) (2020). _Building
+digital workforce capacity and skills for data-intensive science_.
+OECD.
+
+&lt;a name=bib-Sandve2013-nd&gt;&lt;/a&gt;[Sandve, G. K., A. Nekrutenko, et
+al.](#cite-Sandve2013-nd) (2013). "Ten simple rules for reproducible
+computational research". En. In: _PLoS Comput. Biol._ 9.10, p.
+e1003285.
+]
+
+---
+# References
+.footnote[
+Slides made with with xaringan &lt;a name=cite-xaringan&gt;&lt;/a&gt;([Xie, 2019](#bib-xaringan)) and xaringanExtra &lt;a name=cite-xaringanExtra&gt;&lt;/a&gt;([Aden-Buie, 2020](#bib-xaringanExtra))
+
+]
+.font80[
+&lt;a name=bib-Sandve2013-nd&gt;&lt;/a&gt;[Sandve, G. K., A. Nekrutenko, et
 al.](#cite-Sandve2013-nd) (2013). "Ten simple rules for reproducible
 computational research". En. In: _PLoS Comput. Biol._ 9.10, p.
 e1003285.
@@ -425,22 +625,23 @@ e1003285.
 (2014). "Tidy Data". In: _Journal of Statistical Software, Articles_
 59.10, pp. 1-23.
 
-&lt;a name=bib-Wilson2014-ij&gt;&lt;/a&gt;[Wilson, G, D. A. Aruliah, et
+&lt;a name=bib-Wilkinson2016-pu&gt;&lt;/a&gt;[Wilkinson, M. D., M. Dumontier, et
+al.](#cite-Wilkinson2016-pu) (2016). "The FAIR Guiding Principles for
+scientific data management and stewardship". En. In: _Sci Data_ 3, p.
+160018.
+
+&lt;a name=bib-Wilson2014-ij&gt;&lt;/a&gt;[Wilson, G., D. A. Aruliah, et
 al.](#cite-Wilson2014-ij) (2014). "Best practices for scientific
 computing". En. In: _PLoS Biol._ 12.1, p. e1001745.
 
-...continued
----
-# References
-
-&lt;a name=bib-Wilson2017-cp&gt;&lt;/a&gt;[Wilson, G, J. Bryan, et
+&lt;a name=bib-Wilson2017-cp&gt;&lt;/a&gt;[Wilson, G., J. Bryan, et
 al.](#cite-Wilson2017-cp) (2017). "Good enough practices in scientific
 computing". En. In: _PLoS Comput. Biol._ 13.6, p. e1005510.
 
 &lt;a name=bib-xaringan&gt;&lt;/a&gt;[Xie, Y.](#cite-xaringan) (2019). _xaringan:
 Presentation Ninja_. R package version 0.12. URL:
 [https://CRAN.R-project.org/package=xaringan](https://CRAN.R-project.org/package=xaringan).
-
+]
 ---
 # Introduction to Reproducibility in R
 
