2022 updates to 02_intro_to_r..; updated icense and citation info for slides 02-06

--- a/slides/01_intro_and_principles_of_repro.html
+++ b/slides/01_intro_and_principles_of_repro.html
@@ -173,7 +173,7 @@ class: inverse
 # Survey results 1/3
 
 
-The distribution of ratings you (n = 28) gave in the survey were:
+The distribution of ratings you (n = 30) gave in the survey were:
 &lt;img src="01_intro_and_principles_of_repro_files/figure-html/unnamed-chunk-2-1.png" width="864" /&gt;
 
 ---
@@ -209,12 +209,12 @@ Less than you probably think
 # Reproducibility is key!
 
 One definition
-*"... obtaining consistent results using the same input data; computational steps, methods, and code; and conditions of analysis. This definition is synonymous with “computational reproducibility"*. &lt;a name=cite-National_Academies_of_Sciences_Engineering2019-sb&gt;&lt;/a&gt;([National Academies of Sciences, Engineering Medicine, et al., 2019](#bib-National_Academies_of_Sciences_Engineering2019-sb))
+*"... obtaining consistent results using the same input data; computational steps, methods, and code; and conditions of analysis. This definition is synonymous with “computational reproducibility"*. (National Academies of Sciences, Engineering Medicine, et al., 2019)
 
  Also see 
 
 -  The Turing Way "Definitions for Reproducibility" 
--  National Science Foundation &lt;a name=cite-K_Bollen2015-un&gt;&lt;/a&gt;([Bollen Cacioppo, et al., 2015](#bib-K_Bollen2015-un))
+-  National Science Foundation (Bollen Cacioppo, et al., 2015)
 
 ---
 # Reproducibility is key!
@@ -229,12 +229,12 @@ How the Turing Way  defines reproducible research
 ---
 # Who cares?
 
-* Many high profile cases of work which did not reproduce e.g. Anil Potti unravelled by &lt;a name=cite-Baggerly2009-pw&gt;&lt;/a&gt;[Baggerly and Coombes (2009)](#bib-Baggerly2009-pw) 
+* Many high profile cases of work which did not reproduce e.g. Anil Potti unravelled by Baggerly and Coombes (2009) 
 
-* Five selfish reasons to work reproducibly &lt;a name=cite-Markowetz2015&gt;&lt;/a&gt;([Markowetz, 2015](#bib-Markowetz2015)). Alternatively, see the [talk](https://youtu.be/yVT07Sukv9Q)
+* Five selfish reasons to work reproducibly (Markowetz, 2015). Alternatively, see the [talk](https://youtu.be/yVT07Sukv9Q)
 
 
-* **Will** become standard in Science and publishing e.g OECD Global Science Forum Building digital workforce capacity and skills for data-intensive science &lt;a name=cite-OECD_Global_Science_Forum2020-cp&gt;&lt;/a&gt;([OECD Global Science Forum, 2020](#bib-OECD_Global_Science_Forum2020-cp))
+* **Will** become standard in Science and publishing e.g OECD Global Science Forum Building digital workforce capacity and skills for data-intensive science (OECD Global Science Forum, 2020)
 
 ---
 # Open Science
@@ -244,7 +244,7 @@ How the Turing Way  defines reproducible research
 By Petr Knoth and Nancy Pontika - https://en.wikipedia.org/wiki/Open_science#/media/File:Os_taxonomy.png, CC BY 3.0, https://commons.wikimedia.org/w/index.php?curid=61125075
 ]
 
-FAIR - Findable, Accessible, Interoperable, Reusable &lt;a name=cite-Wilkinson2016-pu&gt;&lt;/a&gt;([Wilkinson Dumontier, et al., 2016](#bib-Wilkinson2016-pu))
+FAIR - Findable, Accessible, Interoperable, Reusable (Wilkinson Dumontier, et al., 2016)
 
 
 
@@ -388,9 +388,9 @@ Tidy data adhere to a consistent structure which makes it easier to manipulate, 
 2. Each observation has its own row.  
 3. Each value has its own cell.  
 
-Closely allied to the relational algebra of relational databases &lt;a name=cite-Codd1990-th&gt;&lt;/a&gt;([Codd, 1990](#bib-Codd1990-th)).  
+Closely allied to the relational algebra of relational databases (Codd, 1990).  
 Underlies the enforced rectangular formatting in SPSS, STATA and R's dataframe.  
-The term 'tidy data' was popularised by &lt;a name=cite-Wickham2014-nl&gt;&lt;/a&gt;[Wickham (2014)](#bib-Wickham2014-nl).   
+The term 'tidy data' was popularised by Wickham (2014).   
 There may be more than one potential tidy structure.  
 
 ---
@@ -545,10 +545,10 @@ Suppose we had just 3 individuals in each of two populations:
 
 ## Further Reading
 
-* "Ten simple rules for reproducible computational research" &lt;a name=cite-Sandve2013-nd&gt;&lt;/a&gt;([Sandve Nekrutenko, et al., 2013](#bib-Sandve2013-nd))  
-* "Best practices for scientific computing" &lt;a name=cite-Wilson2014-ij&gt;&lt;/a&gt;([Wilson Aruliah, et al., 2014](#bib-Wilson2014-ij))  
-* "Good enough practices in scientific computing" &lt;a name=cite-Wilson2017-cp&gt;&lt;/a&gt;([Wilson Bryan, et al., 2017](#bib-Wilson2017-cp))  
-* "Excuse Me, Do You Have a Moment to Talk About Version Control?" &lt;a name=cite-Bryan2018-hl&gt;&lt;/a&gt;([Bryan, 2018](#bib-Bryan2018-hl))  
+* "Ten simple rules for reproducible computational research" (Sandve Nekrutenko, et al., 2013)  
+* "Best practices for scientific computing" (Wilson Aruliah, et al., 2014)  
+* "Good enough practices in scientific computing" (Wilson Bryan, et al., 2017)  
+* "Excuse Me, Do You Have a Moment to Talk About Version Control?" (Bryan, 2018)  
 
 ---
 # Summary
@@ -568,41 +568,33 @@ Suppose we had just 3 individuals in each of two populations:
 # References
 .footnote[
 .font60[
-Slides made with with xaringan &lt;a name=cite-xaringan&gt;&lt;/a&gt;([Xie, 2019](#bib-xaringan)) and xaringanExtra &lt;a name=cite-xaringanExtra&gt;&lt;/a&gt;([Aden-Buie, 2020](#bib-xaringanExtra))
+Slides made with with xaringan (Xie, 2019) and xaringanExtra (Aden-Buie, 2020)
 ]
 ]
 .font60[
-&lt;a name=bib-xaringanExtra&gt;&lt;/a&gt;[Aden-Buie, G.](#cite-xaringanExtra)
-(2020). _xaringanExtra: Extras And Extensions for Xaringan Slides_. R
-package version 0.2.3.9000. URL:
+Aden-Buie, G. (2020). _xaringanExtra: Extras And Extensions for
+Xaringan Slides_. R package version 0.2.3.9000. URL:
 [https://github.com/gadenbuie/xaringanExtra](https://github.com/gadenbuie/xaringanExtra).
 
-&lt;a name=bib-Baggerly2009-pw&gt;&lt;/a&gt;[Baggerly, K. A. and K. R.
-Coombes](#cite-Baggerly2009-pw) (2009). "DERIVING CHEMOSENSITIVITY FROM
-CELL LINES: FORENSIC BIOINFORMATICS AND REPRODUCIBLE RESEARCH IN
+Baggerly, K. A. and K. R. Coombes (2009). "DERIVING CHEMOSENSITIVITY
+FROM CELL LINES: FORENSIC BIOINFORMATICS AND REPRODUCIBLE RESEARCH IN
 HIGH-THROUGHPUT BIOLOGY". In: _Ann. Appl. Stat._ 3.4, pp. 1309-1334.
 
-&lt;a name=bib-K_Bollen2015-un&gt;&lt;/a&gt;[Bollen, K., J. T. Cacioppo, et
-al.](#cite-K_Bollen2015-un) (2015). _Social, Behavioral, and Economic
-Sciences Perspectives on Robust and Reliable Science_. National Science
-Foundation.
+Bollen, K., J. T. Cacioppo, et al. (2015). _Social, Behavioral, and
+Economic Sciences Perspectives on Robust and Reliable Science_.
+National Science Foundation.
 
-&lt;a name=bib-Bryan2018-hl&gt;&lt;/a&gt;[Bryan, J.](#cite-Bryan2018-hl) (2018).
-"Excuse Me, Do You Have a Moment to Talk About Version Control?" In:
-_Am. Stat._ 72.1, pp. 20-27.
+Bryan, J. (2018). "Excuse Me, Do You Have a Moment to Talk About
+Version Control?" In: _Am. Stat._ 72.1, pp. 20-27.
 
-&lt;a name=bib-Codd1990-th&gt;&lt;/a&gt;[Codd, E. F.](#cite-Codd1990-th) (1990).
-_The Relational Model for Database Management: Version 2_. Boston, MA,
-USA: Addison-Wesley Longman Publishing Co., Inc.
+Codd, E. F. (1990). _The Relational Model for Database Management:
+Version 2_. Boston, MA, USA: Addison-Wesley Longman Publishing Co.,
+Inc.
 
-&lt;a name=bib-Markowetz2015&gt;&lt;/a&gt;[Markowetz, F.](#cite-Markowetz2015)
-(2015). "Five selfish reasons to work reproducibly". En. In: _Genome
-Biol._ 16, p. 274.
+Markowetz, F. (2015). "Five selfish reasons to work reproducibly". En.
+In: _Genome Biol._ 16, p. 274.
 
-&lt;a
-name=bib-National_Academies_of_Sciences_Engineering2019-sb&gt;&lt;/a&gt;[National
-Academies of Sciences, Engineering, Medicine, et
-al.](#cite-National_Academies_of_Sciences_Engineering2019-sb) (2019).
+National Academies of Sciences, Engineering, Medicine, et al. (2019).
 _Understanding Reproducibility and Replicability_. National Academies
 Press (US).
 ]
@@ -611,35 +603,28 @@ Press (US).
 # References
 
 .font60[
-&lt;a name=bib-OECD_Global_Science_Forum2020-cp&gt;&lt;/a&gt;[OECD Global Science
-Forum](#cite-OECD_Global_Science_Forum2020-cp) (2020). _Building
-digital workforce capacity and skills for data-intensive science_.
-OECD.
+OECD Global Science Forum (2020). _Building digital workforce capacity
+and skills for data-intensive science_. OECD.
 
-&lt;a name=bib-Sandve2013-nd&gt;&lt;/a&gt;[Sandve, G. K., A. Nekrutenko, et
-al.](#cite-Sandve2013-nd) (2013). "Ten simple rules for reproducible
-computational research". En. In: _PLoS Comput. Biol._ 9.10, p.
-e1003285.
+Sandve, G. K., A. Nekrutenko, et al. (2013). "Ten simple rules for
+reproducible computational research". En. In: _PLoS Comput. Biol._
+9.10, p. e1003285.
 
-&lt;a name=bib-Wickham2014-nl&gt;&lt;/a&gt;[Wickham, H.](#cite-Wickham2014-nl)
-(2014). "Tidy Data". In: _Journal of Statistical Software, Articles_
-59.10, pp. 1-23.
+Wickham, H. (2014). "Tidy Data". In: _Journal of Statistical Software,
+Articles_ 59.10, pp. 1-23.
 
-&lt;a name=bib-Wilkinson2016-pu&gt;&lt;/a&gt;[Wilkinson, M. D., M. Dumontier, et
-al.](#cite-Wilkinson2016-pu) (2016). "The FAIR Guiding Principles for
-scientific data management and stewardship". En. In: _Sci Data_ 3, p.
-160018.
+Wilkinson, M. D., M. Dumontier, et al. (2016). "The FAIR Guiding
+Principles for scientific data management and stewardship". En. In:
+_Sci Data_ 3, p. 160018.
 
-&lt;a name=bib-Wilson2014-ij&gt;&lt;/a&gt;[Wilson, G., D. A. Aruliah, et
-al.](#cite-Wilson2014-ij) (2014). "Best practices for scientific
-computing". En. In: _PLoS Biol._ 12.1, p. e1001745.
+Wilson, G., D. A. Aruliah, et al. (2014). "Best practices for
+scientific computing". En. In: _PLoS Biol._ 12.1, p. e1001745.
 
-&lt;a name=bib-Wilson2017-cp&gt;&lt;/a&gt;[Wilson, G., J. Bryan, et
-al.](#cite-Wilson2017-cp) (2017). "Good enough practices in scientific
-computing". En. In: _PLoS Comput. Biol._ 13.6, p. e1005510.
+Wilson, G., J. Bryan, et al. (2017). "Good enough practices in
+scientific computing". En. In: _PLoS Comput. Biol._ 13.6, p. e1005510.
 
-&lt;a name=bib-xaringan&gt;&lt;/a&gt;[Xie, Y.](#cite-xaringan) (2019). _xaringan:
-Presentation Ninja_. R package version 0.12. URL:
+Xie, Y. (2019). _xaringan: Presentation Ninja_. R package version 0.12.
+URL:
 [https://CRAN.R-project.org/package=xaringan](https://CRAN.R-project.org/package=xaringan).
 ]
 ---
