--- a/slides/02_intro_to_r_and_working_with_data.html
+++ b/slides/02_intro_to_r_and_working_with_data.html
@@ -4,6 +4,7 @@
     <title>Introduction to R and working with data.</title>
     <meta charset="utf-8" />
     <meta name="author" content="Emma Rand" />
+    <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/tile-view/tile-view.css" rel="stylesheet" />
     <script src="libs/tile-view/tile-view.js"></script>
@@ -15,7 +16,7 @@
     <script src="libs/fabric/fabric.min.js"></script>
     <link href="libs/xaringanExtra-scribble/scribble.css" rel="stylesheet" />
     <script src="libs/xaringanExtra-scribble/scribble.js"></script>
-    <script>document.addEventListener('DOMContentLoaded', function() { window.xeScribble = new Scribble({"pen_color":["#FF0000"],"pen_size":3,"eraser_size":30}) })</script>
+    <script>document.addEventListener('DOMContentLoaded', function() { window.xeScribble = new Scribble({"pen_color":["#FF0000"],"pen_size":3,"eraser_size":30,"palette":[]}) })</script>
     <script src="libs/clipboard/clipboard.min.js"></script>
     <link href="libs/xaringanExtra-clipboard/xaringanExtra-clipboard.css" rel="stylesheet" />
     <script src="libs/xaringanExtra-clipboard/xaringanExtra-clipboard.js"></script>
@@ -427,7 +428,7 @@ Base packages (collections of commands) always come with R.
 
 --
 
-Other packages, such as `ggplot2` &lt;a name=cite-ggplot2&gt;&lt;/a&gt;([Wickham, 2016](#bib-ggplot2)) need to be added.
+Other packages, such as `ggplot2` (Wickham, 2016) need to be added.
 
 `ggplot2` is one of the `tidyverse`  packages.
 
@@ -887,12 +888,12 @@ We need to load the `tidyverse` packages for several of commands we will use.
 
 To read the data in to R you need to use the 'relative path'
 
-to the file in the `read_table2()` command:
+to the file in the `read_table()` command:
 
 
 
 ```r
-pigeon &lt;- read_table2("data/pigeon.txt")
+pigeon &lt;- read_table("data/pigeon.txt")
 ```
 
 
@@ -999,7 +1000,7 @@ Instead of having a population in each column, we often have, **and want**, all 
 
 --
 
-This format is described as 'tidy' &lt;a name=cite-Wickham2019-ml&gt;&lt;/a&gt;([Wickham Averick, et al., 2019](#bib-Wickham2019-ml)).
+This format is described as 'tidy' (Wickham Averick, et al., 2019).
 
 
 --
@@ -1027,9 +1028,9 @@ Tidy data adhere to a consistent structure which makes it easier to manipulate, 
 
 ## What is tidy data?
 
-The term 'tidy data' was popularised by &lt;a name=cite-Wickham2014-nl&gt;&lt;/a&gt;[Wickham (2014)](#bib-Wickham2014-nl).
+The term 'tidy data' was popularised by Wickham (2014).
 
-Closely allied to the relational algebra of relational databases &lt;a name=cite-Codd1990-th&gt;&lt;/a&gt;([Codd, 1990](#bib-Codd1990-th)). Underlies the enforced rectangular formatting in SPSS, STATA and R's dataframe.  
+Closely allied to the relational algebra of relational databases (Codd, 1990). Underlies the enforced rectangular formatting in SPSS, STATA and R's dataframe.  
 
 --
 
@@ -1412,7 +1413,7 @@ ggplot(data = pigeon2, aes(x = population, y = distance)) +
 
 class: inverse
 
-# 🎉 Congratulations! Keep practising! 🎉 
+# 🎉 Congratulations! Keep practising! 🎈 
 
 
 
@@ -1420,34 +1421,30 @@ class: inverse
 # References
 .footnote[
 .font60[
-Slides made with with xaringan &lt;a name=cite-xaringan&gt;&lt;/a&gt;([Xie, 2019](#bib-xaringan)) and xaringanExtra &lt;a name=cite-xaringanExtra&gt;&lt;/a&gt;([Aden-Buie, 2020](#bib-xaringanExtra))
+Slides made with with xaringan (Xie, 2019) and xaringanExtra (Aden-Buie, 2020)
 ]
 ]
 .font60[
-&lt;a name=bib-xaringanExtra&gt;&lt;/a&gt;[Aden-Buie, G.](#cite-xaringanExtra)
-(2020). _xaringanExtra: Extras And Extensions for Xaringan Slides_. R
-package version 0.2.3.9000. URL:
+Aden-Buie, G. (2020). _xaringanExtra: Extras And Extensions for
+Xaringan Slides_. R package version 0.2.3.9000. URL:
 [https://github.com/gadenbuie/xaringanExtra](https://github.com/gadenbuie/xaringanExtra).
 
-&lt;a name=bib-Codd1990-th&gt;&lt;/a&gt;[Codd, E. F.](#cite-Codd1990-th) (1990).
-_The Relational Model for Database Management: Version 2_. Boston, MA,
-USA: Addison-Wesley Longman Publishing Co., Inc.
+Codd, E. F. (1990). _The Relational Model for Database Management:
+Version 2_. Boston, MA, USA: Addison-Wesley Longman Publishing Co.,
+Inc.
 
-&lt;a name=bib-Wickham2014-nl&gt;&lt;/a&gt;[Wickham, H.](#cite-Wickham2014-nl)
-(2014). "Tidy Data". In: _Journal of Statistical Software, Articles_
-59.10, pp. 1-23.
+Wickham, H. (2014). "Tidy Data". In: _Journal of Statistical Software,
+Articles_ 59.10, pp. 1-23.
 
-&lt;a name=bib-ggplot2&gt;&lt;/a&gt;[Wickham, H.](#cite-ggplot2) (2016). _ggplot2:
-Elegant Graphics for Data Analysis_. Springer-Verlag New York. ISBN:
-978-3-319-24277-4. URL:
+Wickham, H. (2016). _ggplot2: Elegant Graphics for Data Analysis_.
+Springer-Verlag New York. ISBN: 978-3-319-24277-4. URL:
 [https://ggplot2.tidyverse.org](https://ggplot2.tidyverse.org).
 
-&lt;a name=bib-Wickham2019-ml&gt;&lt;/a&gt;[Wickham, H., M. Averick, et
-al.](#cite-Wickham2019-ml) (2019). "Welcome to the Tidyverse". In:
+Wickham, H., M. Averick, et al. (2019). "Welcome to the Tidyverse". In:
 _JOSS_ 4.43, p. 1686.
 
-&lt;a name=bib-xaringan&gt;&lt;/a&gt;[Xie, Y.](#cite-xaringan) (2019). _xaringan:
-Presentation Ninja_. R package version 0.12. URL:
+Xie, Y. (2019). _xaringan: Presentation Ninja_. R package version 0.12.
+URL:
 [https://CRAN.R-project.org/package=xaringan](https://CRAN.R-project.org/package=xaringan).
 ]
 
@@ -1461,7 +1458,14 @@ Twitter: [@er13_r](https://twitter.com/er13_r)
 GitHub: [3mmaRand](https://github.com/3mmaRand)  
 blog: https://buzzrbeeline.blog/  
 
-&lt;a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"&gt;&lt;img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /&gt;&lt;/a&gt;&lt;br /&gt;&lt;span xmlns:dct="http://purl.org/dc/terms/" property="dct:title"&gt;White Rose BBSRC Doctoral Training Partnership (DTP) in Mechanistic Biology Analytics 1: Introduction to reproducible analyses in R&lt;/span&gt; by &lt;span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName"&gt;Emma Rand&lt;/span&gt; is licensed under a &lt;a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"&gt;Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License&lt;/a&gt;.
+&lt;a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"&gt;&lt;img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /&gt;&lt;/a&gt;&lt;br /&gt;&lt;span xmlns:dct="http://purl.org/dc/terms/" property="dct:title"&gt;Licensed under a &lt;a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"&gt;Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License&lt;/a&gt;.
+
+Rand, E. (2021). White Rose BBSRC DTP Training: An Introduction to Reproducible Analyses in R (Version v1.1). https://doi.org/10.5281/zenodo.4701167
+
+
+
+
+
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
